# document-extraction-tools

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  context7.json  docker-compose.yaml  mkdocs.yml  pull_request_template.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml  publish-test.yaml  publish.yaml  run-precommit-and-tests.yaml
docs/: contributing.md  examples.md  index.md
docs/api/: base-classes.md  configuration.md  types.md
docs/concepts/: configuration.md  data-models.md  evaluation-pipeline.md  extraction-pipeline.md  overview.md  pipeline-context.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: heterogeneous-documents.md  implementing-evaluation.md  implementing-extraction.md  production-patterns.md
src/document_extraction_tools/base/: __init__.py
src/document_extraction_tools/base/converter/: base_converter.py  converter.py
src/document_extraction_tools/base/evaluator/: base_evaluator.py  evaluator.py
src/document_extraction_tools/base/exporter/: base_evaluation_exporter.py  base_extraction_exporter.py  evaluation_exporter.py  exporter.py  extraction_exporter.py
src/document_extraction_tools/base/extractor/: base_extractor.py  extractor.py
src/document_extraction_tools/base/file_lister/: base_file_lister.py  file_lister.py
src/document_extraction_tools/base/reader/: base_reader.py  reader.py
src/document_extraction_tools/base/test_data_loader/: base_test_data_loader.py  test_data_loader.py
src/document_extraction_tools/config/: __init__.py  base_evaluator_config.py  base_extraction_exporter_config.py  base_extractor_config.py  base_test_data_loader_config.py  config_file_mapping.yaml  config_loader.py  converter_config.py  evaluation_exporter_config.py  evaluation_orchestrator_config.py  evaluation_pipeline_config.py  evaluator_config.py  exporter_config.py  extraction_exporter_config.py  extraction_orchestrator_config.py  extraction_pipeline_config.py  extractor_config.py  file_lister_config.py  loader.py  orchestrator_config.py  pipeline_config.py  reader_config.py  settings.py
src/document_extraction_tools/examples/simple_lease_extraction/: evaluation_main.py  extraction_main.py  main.py
src/document_extraction_tools/examples/simple_lease_extraction/components/converter/: pdf_to_image_converter.py
src/document_extraction_tools/examples/simple_lease_extraction/components/evaluator/: accuracy_evaluator.py  f1_evaluator.py
src/document_extraction_tools/examples/simple_lease_extraction/components/exporter/: local_file_evaluation_exporter.py  local_file_exporter.py  local_file_extraction_exporter.py
src/document_extraction_tools/examples/simple_lease_extraction/components/extractor/: gemini_image_extractor.py
src/document_extraction_tools/examples/simple_lease_extraction/components/file_lister/: local_file_lister.py
src/document_extraction_tools/examples/simple_lease_extraction/components/reader/: local_file_reader.py
src/document_extraction_tools/examples/simple_lease_extraction/components/test_data_loader/: local_json_test_data_loader.py  local_test_data_loader.py
src/document_extraction_tools/examples/simple_lease_extraction/config/: converter_config.py  evaluation_exporter_config.py  evaluator_config.py  exporter.yaml  exporter_config.py  extraction_exporter_config.py  extraction_orchestrator.yaml  extractor_config.py  file_lister_config.py  gemini_image_extractor_config.py  local_file_evaluation_exporter_config.py  local_file_extraction_exporter_config.py  local_file_lister_config.py  local_file_reader_config.py  local_json_test_data_loader_config.py  local_test_data_loader_config.py  pdf_to_image_converter_config.py  reader_config.py  test_data_loader_config.py
src/document_extraction_tools/examples/simple_lease_extraction/config/yaml/: accuracy_evaluator.yaml  converter.yaml  evaluation_exporter.yaml  evaluator.yaml  extractor.yaml  f1_evaluator.yaml  file_lister.yaml  reader.yaml  test_data_loader.yaml
src/document_extraction_tools/examples/simple_lease_extraction/implementation/reader/: local_file_reader.py
src/document_extraction_tools/examples/simple_lease_extraction/schema/: schema.py
src/document_extraction_tools/examples/simple_lease_extraction/utils/: llm_as_a_judge.py  mlflow_utils.py
src/document_extraction_tools/runners/: __init__.py
src/document_extraction_tools/runners/evaluation/: evaluation_orchestrator.py  orchestrator.py
src/document_extraction_tools/runners/extraction/: extraction_orchestrator.py  orchestrator.py
src/document_extraction_tools/runners/orchestrator/: orchestrator.py
src/document_extraction_tools/types/: __init__.py  context.py  document.py  document_bytes.py  evaluation_example.py  evaluation_result.py  extraction_result.py  path_identifier.py  schema.py  test_example.py
src/your_module/: adder.py  main.py
tests/: test_config_loader.py  test_evaluation_orchestrator.py  test_example.py  test_extraction_orchestrator.py
